tests/errors/no_nets_on_dumb_component.nm
component Child {
    prefix = "J";
    footprint = "bar";

    pin A: input = 1;
}

component Invalid {
    prefix = "U";
    footprint = "foo";

    net SomeNet;
}